--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
             <!--
               ここに続きのHTMLを書いていきましょう
             -->
+
+            <div class="name_box">
+              <div class="first_name">
+                <p>名字</p>
+                <input type="text">
+              </div>
+              <div class="last_name">
+                <p>名前</p>
+                <input type="text">
+              </div>
+            </div>
+
+            <div class="gender_box"></div>
+
+            <div class="birth_box"></div>
+
+            <div class="email_box"></div>
+
+            <div class="tel_box"></div>
+
+            <div class="password_box"></div>
+            <div class="password_box"></div>
+
+            <div class="course_box"></div>
+
+            <div class="remarks_box"></div>
+
+
             <p class="agreement">アカウントを作成することにより、<a class="link-color" href>利用規約</a>と<a class="link-color" href>プライバシーポリシー</a>に同意するものとします。</p>
           </form>
         </div>
