formレッスン-一次レビュー-commit

--- a/index.html
+++ b/index.html
@@ -31,32 +31,99 @@
               ここに続きのHTMLを書いていきましょう
             -->
 
-            <div class="name_box">
-              <div class="first_name">
-                <p>名字</p>
-                <input type="text">
-              </div>
+            <!-- 名前 -->
+            <div class="name_box top_space">
               <div class="last_name">
-                <p>名前</p>
-                <input type="text">
+                <p class="label_text">名字<span class="alert"> ※</span></p>
+                <input type="text" class="input_init input_area" name="last_name" required>
+              </div>
+              <div class="first_name">
+                <p class="label_text">名前<span class="alert"> ※</span></p>
+                <input type="text" class="input_init input_area" name="first_name" required>
               </div>
             </div>
 
-            <div class="gender_box"></div>
+            <!-- 性別 -->
+            <div class="gender_box top_space">
+              <p class="label_text">性別</p>
+              <div class="gender_contents">
+                <label class="gender_content">
+                  <input type="radio" class="gender_input" name="gender" value="male">
+                  <span>男性</span>
+                </label>
+                <label class="gender_content">
+                  <input type="radio" class="gender_input" name="gender" value="female">
+                  <span>女性</span>
+                </label>
+                <label class="gender_content">
+                  <input type="radio" class="gender_input" name="gender" value="other">
+                  <span>その他</span>
+                </label>
+              </div>
+            </div>
 
-            <div class="birth_box"></div>
+            <!-- 出身 -->
+            <div class="birth_box top_space is-halfWidth">
+              <p class="label_text">出身</p>
+              <div class="select_contents">
+                <select class="input_init input_area birth_input" name="birth" id="birth">
+                  <option value="東京">東京</option>
+                  <option value="千葉">千葉</option>
+                  <option value="埼玉">埼玉</option>
+                  <option value="神奈川">神奈川</option>
+                </select>
+              </div>
+            </div>
 
-            <div class="email_box"></div>
+            <!-- メール -->
+            <div class="email_box top_space">
+              <p class="label_text">Eメール<span class="alert"> ※</span></p>
+              <input type="email" class="input_init input_area is-fullWidth" name="email" placeholder="ex) hoge@example.com" required>
+            </div>
 
-            <div class="tel_box"></div>
+            <!-- 電話番号 -->
+            <div class="tel_box top_space">
+              <p class="label_text">電話番号</p>
+              <input type="tel" class="input_init input_area is-fullWidth" name="tel" placeholder="ex) 09012345678">
+            </div>
 
-            <div class="password_box"></div>
-            <div class="password_box"></div>
+            <!-- パスワード -->
+            <div class="password_box top_space">
+              <p class="label_text">パスワード<span class="alert"> ※</span></p>
+              <input type="password" class="input_init input_area is-fullWidth" name="password" required>
+            </div>
+            <div class="password_box top_space">
+              <p class="label_text">パスワード（確認用）<span class="alert"> ※</span></p>
+              <input type="password" class="input_init input_area is-fullWidth" name="password-confirm" required>
+            </div>
 
-            <div class="course_box"></div>
+            <!-- コース -->
+            <div class="course_box top_space">
+              <p class="label_text">希望コース</p>
+              <div class="course_contents">
+                <input type="checkbox" name="course" value="frontend" id="frontend">
+                <label class="course_text" for="frontend">フロントエンド</label>
+              </div>
+              <div class="course_contents">
+                <input type="checkbox" name="course" value="backend" id="backend">
+                <label class="course_text" for="backend">バックエンド</label>
+              </div>
+              <div class="course_contents">
+                <input type="checkbox" name="course" value="app" id="app">
+                <label class="course_text" for="app">アプリ</label>
+              </div>
+            </div>
 
-            <div class="remarks_box"></div>
+            <!-- 備考 -->
+            <div class="remarks_box top_space">
+              <p class="label_text">備考</p>
+              <textarea class="input_init input_area is-fullWidth" name="remarks" placeholder="何かあればご記入ください"></textarea>
+            </div>
 
+            <!-- 送信ボタン -->
+            <div class="send_button top_space">
+              <input class="input_init button submit_btn is-fullWidth" type="submit" value="アカウント作成">
+            </div>
 
             <p class="agreement">アカウントを作成することにより、<a class="link-color" href>利用規約</a>と<a class="link-color" href>プライバシーポリシー</a>に同意するものとします。</p>
           </form>
@@ -69,3 +136,5 @@
     </section>
   </body>
 </html>
+
+
