相互レビュー修正-パスワード確認用の()が全角になっていた-commit

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <input type="password" class="input_init input_area is-fullWidth" name="password" required>
             </div>
             <div class="password_box top_space">
-              <p class="label_text">パスワード（確認用）<span class="alert"> ※</span></p>
+              <p class="label_text">パスワード(確認用)<span class="alert"> ※</span></p>
               <input type="password" class="input_init input_area is-fullWidth" name="password-confirm" required>
             </div>
 
